# osdev-bootloader

common/: Cargo.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/src/: lib.rs
